<resources>
    <string name="app_name">BelanjaIn</string>
    <string name="product_image_desc">Gambar Produk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="belanjain_logo">Belanjain Logo</string>
    <string name="cta1">Pilihan terbaik hari ini untukmu.</string>
    <string name="checkout">Checkout</string>
    <string name="ringkasan_pesanan">Ringkasan Pesanan</string>
    <string name="hh1">Cari makanan favoritmu...</string>
    <string name="banner">Banner Promo</string>
</resources>